gccida/g1/init_alias_once
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_alias_once/src/alias.c:2904:34: error: use of undeclared identifier 'machine_mode'
&& ix86_hard_regno_mode_ok( i, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4)) ) 
                                 ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_alias_once/src/obj/alias.o] Error 1
